Make header of VPP sticky

--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -14,7 +14,11 @@
 }
 
 .m-properties-panel .m-properties-panel__header {
+  background-color: $color-bg-base;
   border-bottom: 1px solid $color-rule;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .m-properties-panel__modal-overlay {
