--- a/assets/css/_minischedule.scss
+++ b/assets/css/_minischedule.scss
@@ -88,7 +88,7 @@
 
   .m-minischedule__row:not(:first-child) {
     &::before {
-      bottom: 50%;
+      bottom: calc(100% - 1rem);
       content: "";
       top: 0;
     }
@@ -98,7 +98,7 @@
     &::after {
       bottom: 0;
       content: "";
-      top: 50%;
+      top: 1rem;
     }
   }
 }
