--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -14,14 +14,14 @@
 
   .m-vehicle-map {
     .fullscreen-icon {
-      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 48 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m0 0v3.73 13.07h3.73v-13.07h13.07v-3.73h-13.07z'/%3E%3Cpath d='m3.73 31.2h-3.73v13.07 3.73h3.73 13.07v-3.73h-13.07z'/%3E%3Cpath d='m44.27 0h-13.07v3.73h13.07v13.07h3.73v-13.07-3.73z'/%3E%3Cpath d='m44.27 44.27h-13.07v3.73h13.07 3.73v-3.73-13.07h-3.73z'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpolygon points='0 0 0 3.73 0 16.8 3.73 16.8 3.73 3.73 16.8 3.73 16.8 0 3.73 0 0 0'/%3E%3Cpolygon points='3.73 31.2 0 31.2 0 44.27 0 48 3.73 48 16.8 48 16.8 44.27 3.73 44.27 3.73 31.2'/%3E%3Cpolygon points='44.27 0 31.2 0 31.2 3.73 44.27 3.73 44.27 16.8 48 16.8 48 3.73 48 0 44.27 0'/%3E%3Cpolygon points='44.27 44.27 31.2 44.27 31.2 48 44.27 48 48 48 48 44.27 48 31.2 44.27 31.2 44.27 44.27'/%3E%3C/svg%3E");
       background-size: 16px;
 
       // You might think that the FullscreenControl library would apply
       // different CSS classes to the icon depending on if it were in the
       // expanded or collapsed state. But it doesn't, hence this hack.
       &[title="Exit Full Screen"] {
-        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 48 48' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m13.07 13.07h-13.07v3.73h13.07 3.73v-3.73-13.07h-3.73z'/%3E%3Cpath d='m0 31.2v3.73h13.07v13.07h3.73v-13.07-3.73h-3.73z'/%3E%3Cpath d='m34.93 13.07v-13.07h-3.73v13.07 3.73h3.73 13.07v-3.73z'/%3E%3Cpath d='m31.2 31.2v3.73 13.07h3.73v-13.07h13.07v-3.73h-13.07z'/%3E%3C/svg%3E");
+        background-image: url("data:image/svg+xml,%3Csvg id='Layer_1' data-name='Layer 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cpolygon points='13.07 13.07 0 13.07 0 16.8 13.07 16.8 16.8 16.8 16.8 13.07 16.8 0 13.07 0 13.07 13.07'/%3E%3Cpolygon points='0 31.2 0 34.93 13.07 34.93 13.07 48 16.8 48 16.8 34.93 16.8 31.2 13.07 31.2 0 31.2'/%3E%3Cpolygon points='34.93 13.07 34.93 0 31.2 0 31.2 13.07 31.2 16.8 34.93 16.8 48 16.8 48 13.07 34.93 13.07'/%3E%3Cpolygon points='31.2 31.2 31.2 34.93 31.2 48 34.93 48 34.93 34.93 48 34.93 48 31.2 34.93 31.2 31.2 31.2'/%3E%3C/svg%3E");
       }
     }
   }
