Fix full-bus crowding icon

--- a/assets/css/_crowding_diagram.scss
+++ b/assets/css/_crowding_diagram.scss
@@ -84,7 +84,8 @@ $color-crowding-icon-bg: $color-bg-medium;
   }
 
   &--crowded {
-    svg * {
+    svg path,
+    svg circle {
       fill: $color-crowding-crowded;
     }
   }
