Move frontend DSN to env var

--- a/lib/skate_web/templates/layout/_sentry.html.eex
+++ b/lib/skate_web/templates/layout/_sentry.html.eex
@@ -1,3 +1,5 @@
 <script>
-  window.recordSentry = true;
+  window.sentry = {
+    dsn: "<%= Application.get_env(:skate, :sentry_frontend_dsn) %>"
+  }
 </script>
