--- a/assets/css/_crowding_diagram.scss
+++ b/assets/css/_crowding_diagram.scss
@@ -107,3 +107,21 @@ $color-crowding-icon-bg: $color-bg-medium;
     }
   }
 }
+
+.m-route-ladder__crowding-toggle {
+  &--hide {
+    circle,
+    path {
+      fill: $color-secondary-dark;
+      stroke: $color-secondary-dark;
+    }
+  }
+
+  &--show {
+    circle,
+    path {
+      fill: currentColor;
+      stroke: currentColor;
+    }
+  }
+}
