show other buses on the same route in VPP (#724)

--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -1,8 +1,14 @@
 .m-vehicle-map__label {
-  @include font-emph;
-
   svg {
     overflow: visible;
+  }
+
+  &.primary {
+    @include font-emph;
+  }
+
+  &.secondary {
+    @include font-tiny;
   }
 }
 
