--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -10,7 +10,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "leaflet";
 
 @import "close_button";
-@import "crowding_diagram";
+@import "crowding";
 @import "data_status_banner";
 @import "disconnected_modal";
 @import "icon_alert_circle";
