Correct empty-bus icon color

--- a/assets/css/_crowding.scss
+++ b/assets/css/_crowding.scss
@@ -1,5 +1,5 @@
 $color-crowding-empty-text: $color-component-medium;
-$color-crowding-empty-icon: $color-secondary-light;
+$color-crowding-empty-icon: $color-bg-medium;
 $color-crowding-no-data-icon: $color-secondary-light;
 $color-crowding-not-crowded: #5cbf95;
 $color-crowding-some-crowding: #fca400;
