--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -25,7 +25,7 @@
 .m-route-ladder__controls {
   display: flex;
   grid-row-start: m-route-ladder__controls;
-  position: relative;
+  justify-content: space-between;
 }
 
 .m-route-ladder__reverse,
@@ -33,12 +33,8 @@
   @include font-small;
   @include button-transparent;
   @include button-icon(0.625rem);
+  flex: 0 1 auto;
   margin-top: 0.5rem;
-}
-
-.m-route-ladder__crowding-toggle {
-  position: absolute;
-  right: 0;
 }
 
 .m-route-ladder__reverse-icon,
