nearest intersection frontend

--- a/assets/css/properties_panel/_vehicle_properties_panel.scss
+++ b/assets/css/properties_panel/_vehicle_properties_panel.scss
@@ -32,8 +32,19 @@
   float: right;
 }
 
+.m-vehicle-properties-panel__label {
+  @include font-label;
+  margin-bottom: 0.5rem;
+}
+
+.m-vehicle-properties-panel__value {
+  @include font-body;
+  margin-bottom: 0.5rem;
+}
+
 .m-vehicle-properties-panel__link {
   @include font-link;
+  margin-bottom: 0.5rem;
 }
 
 .m-vehicle-properties-panel__not-available {
