--- a/assets/css/properties_panel/_vehicle_properties_panel.scss
+++ b/assets/css/properties_panel/_vehicle_properties_panel.scss
@@ -34,17 +34,18 @@
 
 .m-vehicle-properties-panel__label {
   @include font-label;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
+  margin-top: 0.5rem;
 }
 
 .m-vehicle-properties-panel__value {
   @include font-body;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .m-vehicle-properties-panel__link {
   @include font-link;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .m-vehicle-properties-panel__not-available {
