--- a/assets/css/_route_ladder.scss
+++ b/assets/css/_route_ladder.scss
@@ -25,15 +25,37 @@
 .m-route-ladder__controls {
   display: flex;
   grid-row-start: m-route-ladder__controls;
+  justify-content: space-between;
 }
 
-.m-route-ladder__reverse {
+.m-route-ladder__reverse,
+.m-route-ladder__crowding-toggle {
   @include font-small;
   @include button-transparent;
   @include button-icon(0.625rem);
+  flex: 0 1 auto;
   margin-top: 0.5rem;
 }
 
-.m-route-ladder__reverse-icon {
+.m-route-ladder__reverse-icon,
+.m-route-ladder__crowding-toggle-icon {
   margin-right: 0.25rem;
+}
+
+.m-route-ladder__crowding-toggle {
+  &--hide {
+    circle,
+    path {
+      fill: $color-secondary-dark;
+      stroke: $color-secondary-dark;
+    }
+  }
+
+  &--show {
+    circle,
+    path {
+      fill: currentColor;
+      stroke: currentColor;
+    }
+  }
 }
