--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-width: 100%;
   overflow-x: hidden;
   overflow-y: scroll;
   position: absolute;
@@ -11,6 +10,10 @@
   top: 0;
   width: 23.5rem;
   z-index: 1001;
+
+  @media screen and (max-width: $mobile-max-width) {
+    width: 100vw;
+  }
 }
 
 .m-properties-panel .m-properties-panel__header-wrapper {
@@ -27,6 +30,5 @@
 
 .m-properties-panel__modal-overlay {
   @include modal-overlay;
-  position: absolute;
   z-index: 1000;
 }
