--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -36,6 +36,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "search_form";
 @import "search_page";
 @import "search_results";
+@import "settings_page";
 @import "shuttle_map";
 @import "tab_bar";
 @import "vehicle_icon";
