--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -18,6 +18,7 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "ladder";
 @import "ladder_page";
 @import "minischedule";
+@import "notifications";
 @import "page";
 @import "picker_container";
 @import "properties_list";
