--- a/assets/css/_ui_kit.scss
+++ b/assets/css/_ui_kit.scss
@@ -274,3 +274,4 @@ $modal-box-shadow: 0 0 2rem 0 transparentize($black, 0.5);
 }
 
 $subtle-box-shadow: 0 2px 4px 0 rgba(176, 181, 192, 0.5);
+$box-shadow-secondary: 0 2px 4px 0 rgba(77, 182, 172, 0.2);
