format index.html

--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -1,1 +1,4 @@
-<div id="app" data-user-token="<%= @user_token %>" data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"></div>
+<div id="app"
+  data-user-token="<%= @user_token %>"
+  data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"
+></div>
