--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -15,9 +15,11 @@ $picker-width-wide: $picker-width-narrow + 3.1;
 @import "disconnected_modal";
 @import "icon_alert_circle";
 @import "incoming_box";
+@import "invalid_notification_modal";
 @import "ladder";
 @import "ladder_page";
 @import "minischedule";
+@import "modal";
 @import "notifications";
 @import "page";
 @import "picker_container";
