--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -1,6 +1,6 @@
 <div id="app"
   data-user-token="<%= @user_token %>"
   data-csrf-token="<%= @csrf_token %>"
-  data-settings="<%= Jason.encode!(@settings) %>"
+  data-user-settings="<%= Jason.encode!(@user_settings) %>"
   data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"
 ></div>
