Save route setting updates from frontend to DB

--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -2,5 +2,6 @@
   data-user-token="<%= @user_token %>"
   data-csrf-token="<%= @csrf_token %>"
   data-user-settings="<%= Jason.encode!(@user_settings) %>"
+  data-route-settings="<%= Jason.encode!(@route_settings) %>"
   data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"
 ></div>
