Store route settings in database rather than localStorage (#915)
* Data structures and DB tables for route settings

* Reorganize settings-related directory subtree

* Get or create route settings

* Set route settings

* Rename SettingsController and friends

* Change Settings to UserSettings in frontend

* Move route settings to backend

* Save route setting updates from frontend to DB

--- a/lib/skate_web/templates/page/index.html.eex
+++ b/lib/skate_web/templates/page/index.html.eex
@@ -1,6 +1,7 @@
 <div id="app"
   data-user-token="<%= @user_token %>"
   data-csrf-token="<%= @csrf_token %>"
-  data-settings="<%= Jason.encode!(@settings) %>"
+  data-user-settings="<%= Jason.encode!(@user_settings) %>"
+  data-route-settings="<%= Jason.encode!(@route_settings) %>"
   data-laboratory-features="<%= Jason.encode!(@laboratory_features) %>"
 ></div>
