show notification content in drawer

--- a/assets/css/_notification_content.scss
+++ b/assets/css/_notification_content.scss
@@ -1,3 +1,7 @@
+.m-notification-content {
+  padding: 0.5rem 1rem;
+}
+
 .m-notification-content__title-row {
   display: flex;
   justify-content: space-between;
