fixup: small CSS fix

--- a/assets/css/_notification_drawer.scss
+++ b/assets/css/_notification_drawer.scss
@@ -69,6 +69,7 @@
 
 .m-notification-drawer__mark-all-read-link {
   color: $color-secondary-dark;
+  cursor: pointer;
   position: absolute;
   right: 0;
 }
