--- a/assets/css/_notification_drawer.scss
+++ b/assets/css/_notification_drawer.scss
@@ -88,7 +88,7 @@
   background-color: $white;
   border-radius: 4px;
   bottom: 1.5rem;
-  box-shadow: 0 2px 4px 0 rgba(126, 126, 126, 0.5);
+  box-shadow: $submenu-box-shadow;
   padding: 1rem 2rem 1rem 1rem;
   position: absolute;
   right: 1rem;
